common/force-app/main/default/objects/Lead/fields/lead_product__c.field-meta.xml
<CustomField>
    <fullName>lead_product__c</fullName>
    <formula>IF(
   ISBLANK(Web_Source__c),
   utm_campaign__c,
   Web_Source__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>lead_product</label>
    <type>Text</type>
</CustomField>