common/force-app/main/default/objects/Lead/fields/Lead_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Status__c</fullName>
    <label>Lead Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Made</fullName>
            </value>
            <value>
                <fullName>No Contact Made</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>