common/force-app/main/default/objects/Lead/fields/Licensed_Financial_Adviser__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Financial_Adviser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Licensed Financial Adviser</label>
    <type>Checkbox</type>
</CustomField>