common/force-app/main/default/objects/Lead/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Another real estate agent</fullName>
            </value>
            <value>
                <fullName>Awaiting other Development Results</fullName>
            </value>
            <value>
                <fullName>Bought another property</fullName>
            </value>
            <value>
                <fullName>Buyer&apos;s agent</fullName>
            </value>
            <value>
                <fullName>Can&apos;t decide</fullName>
            </value>
            <value>
                <fullName>Cancelled Before Appointment</fullName>
            </value>
            <value>
                <fullName>Claims they never clicked</fullName>
            </value>
            <value>
                <fullName>Claim they did not book</fullName>
            </value>
            <value>
                <fullName>CM-Dasp-Advisor</fullName>
            </value>
            <value>
                <fullName>CM-Dasp-Didn&apos;t like the project</fullName>
            </value>
            <value>
                <fullName>CM-Dasp-No Trust - does not understand the model</fullName>
            </value>
            <value>
                <fullName>CM-Dasp-Other</fullName>
            </value>
            <value>
                <fullName>CM-Dasp-Personal reasons.</fullName>
            </value>
            <value>
                <fullName>CM-Wasp-Location based</fullName>
            </value>
            <value>
                <fullName>CM-Wasp-No Trust - does not understand the model</fullName>
            </value>
            <value>
                <fullName>CM-Wasp-time waster</fullName>
            </value>
            <value>
                <fullName>CM-wasp-Timing not quite right -but still interested.</fullName>
            </value>
            <value>
                <fullName>Couldn&apos;t get finance</fullName>
            </value>
            <value>
                <fullName>Dasp Lost Tags</fullName>
            </value>
            <value>
                <fullName>Does Not Qualify</fullName>
            </value>
            <value>
                <fullName>Don&apos;t have enough in SMSF</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Founder looking to raise capital</fullName>
            </value>
            <value>
                <fullName>Invested Elsewhere</fullName>
            </value>
            <value>
                <fullName>Just looking</fullName>
            </value>
            <value>
                <fullName>Lots too small</fullName>
            </value>
            <value>
                <fullName>Multiple Offer on Lot</fullName>
            </value>
            <value>
                <fullName>Multiple opportunities</fullName>
            </value>
            <value>
                <fullName>No Deposit</fullName>
            </value>
            <value>
                <fullName>No funds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>