common/force-app/main/default/objects/Lead/fields/Lost_Stages__c.field-meta.xml
<CustomField>
    <fullName>Lost_Stages__c</fullName>
    <label>Lost Stages</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CR Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>