common/force-app/main/default/objects/Lead/fields/Matched_Account_Persona__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Persona__c</fullName>
    <formula>TEXT(Matching_Account__r.PersonContact.Persona__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account Persona</label>
    <type>Text</type>
</CustomField>