common/force-app/main/default/objects/Lead/fields/Matching_Account__c.field-meta.xml
<CustomField>
    <fullName>Matching_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matching Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Matching Account)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>