common/force-app/main/default/objects/Lead/fields/Min_Investment__c.field-meta.xml
<CustomField>
    <fullName>Min_Investment__c</fullName>
    <label>Min Investment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>