common/force-app/main/default/objects/Lead/fields/Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount__c</fullName>
    <formula>IF(
  ISBLANK(TEXT(Investment_Amount__c)),
  IF(
    OR(
      ISPICKVAL(Wholesale_Status__c, &quot;No&quot;),
      ISPICKVAL(Wholesale_Status__c, &quot;&quot;)
    ),
    1900,
    IF(
      ISPICKVAL(Wholesale_Status__c, &quot;Yes&quot;),
      21000,
      NULL
    )
  ),
  IF(
    CONTAINS(TEXT(Investment_Amount__c), &quot;+&quot;),
    VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(Investment_Amount__c), FIND(&quot;+&quot;, TEXT(Investment_Amount__c)) - 1), &quot;$&quot;, &quot;&quot;), &quot;,&quot;, &quot;&quot;)),
    IF(
      OR(CONTAINS(TEXT(Investment_Amount__c), &quot; to &quot;), CONTAINS(TEXT(Investment_Amount__c), &quot;-&quot;)),
      VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(Investment_Amount__c), FIND(&quot; &quot;, TEXT(Investment_Amount__c)) - 1), &quot;$&quot;, &quot;&quot;), &quot;,&quot;, &quot;&quot;)),
      IF(
        OR(CONTAINS(TEXT(Investment_Amount__c), &quot;$&quot;), FIND(&quot;-&quot;, TEXT(Investment_Amount__c)) &gt; 0),
        VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(Investment_Amount__c), FIND(&quot;-&quot;, TEXT(Investment_Amount__c)) - 1), &quot;$&quot;, &quot;&quot;), &quot;,&quot;, &quot;&quot;)),
        NULL
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>