common/force-app/main/default/objects/Lead/fields/ML_Score__c.field-meta.xml
<CustomField>
    <fullName>ML_Score__c</fullName>
    <description>Stores the ML score pushed from outside of salesforce</description>
    <label>ML Score</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>