common/force-app/main/default/objects/Lead/fields/Next_Step_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Date_Time__c</fullName>
    <description>Next step date and time</description>
    <label>Next Step Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>