common/force-app/main/default/objects/Lead/fields/Next_Step_Date_Validation__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Date_Validation__c</fullName>
    <formula>IF(
    ISPICKVAL(Status, &quot;Qualified&quot;),
    IF(
        ISBLANK(Next_Step_Date_Time__c),
        &quot;🔵 Closed Lead&quot;,
        &quot;🔵 Closed Lead&quot;
    ),
    IF(
        ISPICKVAL(Status, &quot;Lost&quot;),
        IF(
            ISBLANK(Next_Step_Date_Time__c),
            &quot;🟠 Closed Lost&quot;, 
            &quot;🟠 Closed Lost&quot;
        ),
        IF(
            ISBLANK(Next_Step_Date_Time__c),
            &quot;☢️ No Steps&quot;,
            IF(
                DATEVALUE(Next_Step_Date_Time__c) &lt; TODAY(),
                &quot;🔴 Outdated Step&quot;,
                &quot;🟢 Step on time&quot;
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please put the date/time of your future next step</inlineHelpText>
    <label>Next Step Date Validation</label>
    <type>Text</type>
</CustomField>