common/force-app/main/default/objects/Lead/fields/Number_of_shares_to_sell__c.field-meta.xml
<CustomField>
    <fullName>Number_of_shares_to_sell__c</fullName>
    <label>Number of shares to sell</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>