common/force-app/main/default/objects/Lead/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conscious Investor</fullName>
            </value>
            <value>
                <fullName>Grand Designer</fullName>
            </value>
            <value>
                <fullName>Keen Bean</fullName>
            </value>
            <value>
                <fullName>Sharp Shooter</fullName>
            </value>
            <value>
                <fullName>Wealth Creator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>