common/force-app/main/default/objects/Lead/fields/Portal_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Portal_Display_Name__c</fullName>
    <label>Portal Display Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>