common/force-app/main/default/objects/Lead/fields/Potential_Lost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Potential_Lost_Amount__c</fullName>
    <formula>IF(
  OR(
    ISPICKVAL(Status, &quot;CR Lost&quot;),
    ISPICKVAL(Status, &quot;Unqualified&quot;),
    ISPICKVAL(Status, &quot;Lost&quot;),
    ISPICKVAL(Status, &quot;Qualified&quot;),
    (TODAY() - DATEVALUE(CreatedDate)) &lt;&gt; 21
  ),
  0,
  Minimum_Amount__c * 0.165
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Lost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>