common/force-app/main/default/objects/Lead/fields/Pre_approval_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pre_approval_Amount__c</fullName>
    <label>Pre-approval Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>