common/force-app/main/default/objects/Lead/fields/Preference__c.field-meta.xml
<CustomField>
    <fullName>Preference__c</fullName>
    <inlineHelpText>Field populated by checkboxes ticked on the registration page.</inlineHelpText>
    <label>Preference</label>
    <type>TextArea</type>
</CustomField>