common/force-app/main/default/objects/Lead/fields/preferred_next_steps__c.field-meta.xml
<CustomField>
    <fullName>preferred_next_steps__c</fullName>
    <label>What is your preferred next step?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone_call</fullName>
            </value>
            <value>
                <fullName>Email_with_Product_Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>