common/force-app/main/default/objects/Lead/fields/Price_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Price_Feedback__c</fullName>
    <label>Price Feedback</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>