common/force-app/main/default/objects/Lead/fields/Products_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Products_Interested_In__c</fullName>
    <label>Products Interested In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First_Mortgage</fullName>
                <label>First Mortgage</label>
            </value>
            <value>
                <fullName>Investing</fullName>
            </value>
            <value>
                <fullName>Listing a Property</fullName>
            </value>
            <value>
                <fullName>Private Syndicate Platform (PSP)</fullName>
            </value>
            <value>
                <fullName>Property Equity</fullName>
            </value>
            <value>
                <fullName>Property Sales</fullName>
            </value>
            <value>
                <fullName>Raising Capital</fullName>
            </value>
            <value>
                <fullName>Startups</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>GP</fullName>
                <isActive>false</isActive>
                <label>GP</label>
            </value>
            <value>
                <fullName>H</fullName>
                <isActive>false</isActive>
                <label>H</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>