common/force-app/main/default/objects/Lead/fields/Raise_Size__c.field-meta.xml
<CustomField>
    <fullName>Raise_Size__c</fullName>
    <label>Raise Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>