common/force-app/main/default/objects/Lead/fields/Referral_Application__c.field-meta.xml
<CustomField>
    <fullName>Referral_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Application</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Application__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Referral Application</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>