common/force-app/main/default/objects/Lead/fields/Register_interest_for__c.field-meta.xml
<CustomField>
    <fullName>Register_interest_for__c</fullName>
    <label>Register interest for</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cornerstone Village - Pimpama, QLD</fullName>
            </value>
            <value>
                <fullName>Woodside Park - Fernvale, QLD</fullName>
            </value>
            <value>
                <fullName>Stonewood Estate - Oxenford, QLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>