common/force-app/main/default/objects/Lead/fields/Rel_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Rel_Account_Type__c</fullName>
    <description>This is a field that brings the record type ID and then we can filter it on reports</description>
    <formula>Matching_Account__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a field that brings the record type ID and then we can filter it on reports</inlineHelpText>
    <label>Rel Account Type</label>
    <type>Text</type>
</CustomField>