common/force-app/main/default/objects/Lead/fields/Related_EOI__c.field-meta.xml
<CustomField>
    <fullName>Related_EOI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related EOI</label>
    <referenceTo>EOI__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>