common/force-app/main/default/objects/Lead/fields/Related_Raise__c.field-meta.xml
<CustomField>
    <fullName>Related_Raise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Founder Raise</label>
    <referenceTo>Raise__c</referenceTo>
    <relationshipLabel>Founder Lead</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>