common/force-app/main/default/objects/Lead/fields/Round_Robin_Id__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Id__c</fullName>
    <formula>MOD(VALUE(Lead_Number__c), 2)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Robin Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>