common/force-app/main/default/objects/Lead/fields/Sector_Investor_interested_in__c.field-meta.xml
<CustomField>
    <fullName>Sector_Investor_interested_in__c</fullName>
    <label>Sector Investor interested in</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FinTech</fullName>
            </value>
            <value>
                <fullName>EdTech</fullName>
            </value>
            <value>
                <fullName>MedTech</fullName>
            </value>
            <value>
                <fullName>AgTech</fullName>
            </value>
            <value>
                <fullName>FoodTech</fullName>
            </value>
            <value>
                <fullName>PropTech</fullName>
            </value>
            <value>
                <fullName>Impact</fullName>
            </value>
            <value>
                <fullName>Financial Funds</fullName>
            </value>
            <value>
                <fullName>Property Development</fullName>
            </value>
            <value>
                <fullName>Arts &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Venture Capital</fullName>
            </value>
            <value>
                <fullName>Family Office</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>Agnostic</fullName>
            </value>
            <value>
                <fullName>B2B Software</fullName>
            </value>
            <value>
                <fullName>BioTech</fullName>
            </value>
            <value>
                <fullName>Blockchain</fullName>
            </value>
            <value>
                <fullName>CleanTech</fullName>
            </value>
            <value>
                <fullName>ClimateTech</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Crypto</fullName>
            </value>
            <value>
                <fullName>Decentralised Finance</fullName>
            </value>
            <value>
                <fullName>DeepTech</fullName>
            </value>
            <value>
                <fullName>Digital Health</fullName>
            </value>
            <value>
                <fullName>Digital Marketplaces</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Enterprise Saas</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>ESGs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>