common/force-app/main/default/objects/Lead/fields/Sectors_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Sectors_of_Interest__c</fullName>
    <description>Secotrs of interest for leads</description>
    <label>Sectors of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sectors</valueSetName>
    </valueSet>
</CustomField>