common/force-app/main/default/objects/Lead/fields/Social_Following__c.field-meta.xml
<CustomField>
    <fullName>Social_Following__c</fullName>
    <label>Social Following</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>