common/force-app/main/default/objects/Lead/fields/Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>Survey_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Completed SXSW</label>
    <type>Checkbox</type>
</CustomField>