common/force-app/main/default/objects/Lead/fields/Target_Crowd__c.field-meta.xml
<CustomField>
    <fullName>Target_Crowd__c</fullName>
    <label>Target Crowd</label>
    <length>50</length>
    <type>Text</type>
</CustomField>