common/force-app/main/default/objects/Lead/fields/Time_in_Session_minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Session_minutes__c</fullName>
    <label>Time in Session (minutes)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>